istio_config_parser/istio_control_config/envoyfilters/online-boutique/adservice-rate-limit.yaml
apiVersion: networking.istio.io/v1
kind: EnvoyFilter
metadata:
  creationTimestamp: '2025-01-07T07:56:58Z'
  generation: 1
  labels:
    kiali_wizard: rate_limiting
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:kiali_wizard: {}
      f:spec:
        .: {}
        f:workloadSelector: {}
        f:configPatches: {}
    manager: kiali
    operation: Update
    time: '2025-01-07T07:56:58Z'
  name: adservice-rate-limit
  namespace: online-boutique
  resourceVersion: '330767'
  uid: edec9b1f-f367-4fe6-b120-0bf003c6c054
spec:
  workloadSelector:
    labels:
      app: adservice  # 作用于 adservice
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.local_ratelimit
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          stat_prefix: http_local_rate_limiter
          token_bucket:
            max_tokens: 3  # 限制 3 个请求
            tokens_per_fill: 3
            fill_interval: 60s  # 1 分钟重置
          filter_enabled:
            default_value:
              numerator: 100
              denominator: HUNDRED
          filter_enforced:
            default_value:
              numerator: 100
              denominator: HUNDRED
          response_headers_to_add:
            - header:
                key: "x-rate-limit"
                value: "3 requests per minute"
  - applyTo: VIRTUAL_HOST
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: MERGE
      value:
        rate_limits:
        - actions:
            - request_headers:
                header_name: "x-request-source"
                descriptor_key: "recommendationservice"
