istio_config_parser/istio_control_config/envoyfilters/online-boutique/global-ratelimit-recommendation.yaml
apiVersion: networking.istio.io/v1
kind: EnvoyFilter
metadata:
  creationTimestamp: '2025-01-07T07:56:58Z'
  generation: 1
  labels:
    kiali_wizard: rate_limiting
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:kiali_wizard: {}
      f:spec:
        .: {}
        f:workloadSelector: {}
        f:configPatches: {}
    manager: kiali
    operation: Update
    time: '2025-01-07T07:56:58Z'
  name: global-ratelimit-recommendation
  namespace: online-boutique
  resourceVersion: '330768'
  uid: edec9b1f-f367-4fe6-b120-0bf003c6c055
spec:
  workloadSelector:
    labels:
      app: recommendationservice  # 只对 recommendationservice 作用
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
            domain: "ad-recommendation-limit"
            failure_mode_deny: true
            timeout: 2s
            rate_limit_service:
              grpc_service:
                envoy_grpc:
                  cluster_name: rate_limit_cluster
                timeout: 0.25s
